Home UI, Type enum, Barvy incidentu podle typu